# pagenumber

./: .baw  .dockerignore  CHANGELOG  CHANGELOG.md  Dockerfile  Jenkinsfile  Makefile  README.md  pyproject.toml  requirements.dev  requirements.txt  setup.py
.github/workflows/: release.yml
docs/: index.rst
pagenumber/: __init__.py  cli.py  utils.py
pagenumber/feature/: legacy.py  magic.py  result.py
pagenumber/strategy/: magic.py  numbers.py
pagenumbers/: __init__.py  cli.py
pagenumbers/feature/: result.py
pagenumbers/strategy/: numbers.py
tests/: __init__.py  conftest.py  test_numbers.py  test_rotated.py  test_validate.py
tests/expected/: bachelor051  bachelor085  bachelor111  diss128hc  diss148  diss148hc  diss166hc  diss170b  diss171hc  diss193hc  diss218  diss287  diss406  diss480  docu027  home015  home016a  home017c  home019  home019b  home021b  home022  home022b  master049  master072  master091a  master110  master116  master127  paper018  tech024
tests/fixtures/: simple.py
